force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Agr_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Agr_Capacity__c</fullName>
    <label>Capacidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Menor sob tutela</fullName>
            </value>
            <value>
                <fullName>Falecido ou interdito</fullName>
            </value>
            <value>
                <fullName>Menor sob pátrio poder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>