force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Agr_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Agr_Qualification__c</fullName>
    <label>Qualificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pai</fullName>
            </value>
            <value>
                <fullName>Mãe</fullName>
            </value>
            <value>
                <fullName>Tutor</fullName>
            </value>
            <value>
                <fullName>Curador</fullName>
            </value>
            <value>
                <fullName>Procurador</fullName>
            </value>
            <value>
                <fullName>Inventariante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>