force-app/main/default/objects/FinServ__ContactContactRelation__c/fields/Agr_RepresentativeType__c.field-meta.xml
<CustomField>
    <fullName>Agr_RepresentativeType__c</fullName>
    <label>Tipo de representante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PF</fullName>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
            <value>
                <fullName>Administrador</fullName>
            </value>
            <value>
                <fullName>Procurador</fullName>
            </value>
            <value>
                <fullName>Pessoa autorizada a emitir ordem</fullName>
            </value>
            <value>
                <fullName>Proprietário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>